syntax = "proto3";

option java_multiple_files = true;
option java_package = "no.nav.helse.oppslag.arbeidsforhold";

package arbeidsforhold;

service ArbeidsforholdService {
    rpc FinnArbeidsforhold (FinnArbeidsforholdForArbeidstager) returns (CollectionOfArbeidsforhold) {}
}

message FinnArbeidsforholdForArbeidstager {
    string norskIdent = 1;
}

message CollectionOfArbeidsforhold {
    repeated Arbeidsforhold arbeidsforhold = 1;
}

message Arbeidsforhold {
    string arbeidsgiver = 1;
    string arbeidsforholdId = 2;
    string arbeidsforholdType = 3;
    string fomISO8601 = 4;
    string tomISO8601 = 5;
}